--- a/index.html
+++ b/index.html
@@ -11,115 +11,50 @@
 		7  7  7   7		7  |  7   7  7
 		____  7___7		7____7    7__7
 	-->
+	<link rel="stylesheet" href="css/style.css" type="text/css"/>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<body>
 	<header>
-		<div id="header-inner">
-		<div id="leftheader">
+	 	<section id="leftheader">
+	 		<a href="index.html">web design 101</a>
+	 	</section>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
+				<li>
+					<a href="about.html">About</a>
+				</li>
+				<li>
+					<a href="resources.html">Resources</a>
+				</li>
+			</ul>
+		</nav>
 
-			<div id="homebutton">
-				<a href="index.html" id="logo"></a>
-			</div>
-			design illustration ideation
-		</div>
-
-			<nav>
-				<ul>
-					<li> 
-		 			<a href="aboutme.html"> about me</a></button>
-
-					</li>
-					<li>
-						<a href="links.html">links</a>
-					</li>
-				</ul>
-		
-			</nav>
-		</div>
 	</header>
-	<div id="banner">
+	<section id="content">
+		<section class="sent">
+		<h1>what is web design?</h1>
+		<br>
+		<p>
+		Everything about your website - including the content, the way it looks, and the way it works - is determined by the website design. Web design is a process of conceptualizing, planning, and building a collection of electronic files that determine the layout, colors, text styles, structure, graphics, images, and use of interactive features that deliver pages to your site visitors. Professional Web design helps to make your business appear credible online.
+		</p>
 
-<div id="banner.inner">
-		
-		<div id="lysandravuong">
-			<img src="images/lv.png" div id="lv">
-			<div id="hello"><br>Hi! I'm LySandra Vuong, <br>a design savy engineering student.</div>
-		</div>
-		
-</div>
-
-
-	<div id="mid">
-	
-	<div id="intro">
-	here's what i can do
-	</div>
-		<section class="one-third" >
-				
-				<td><img src="images/tablet.png" class="circleicon"></td>
-			<h1>Illustration</h1>
-			<p> From cover art to portraits to murals, I accept commissions of all types. </br> </br> 
-			</p>
 		</section>
-		<section class="one-third" >
-			
-			<td><img src="images/screen.png" class="circleicon"></td>
-			<h1>Web Design</h1>
-			<p>Startup company? Artist? Have an idea you need to share? Let&#8217s give you a functional and aesthetic platform to display it all. </br></br> </p>
+		<img src="circles.png" id="circles">
+
+		<section id="begin">
+
+		<p><h1> where to begin </h1>
+		<a href="https://www.w3schools.com/html/">w3 schools </a>
+		</p>
 		</section>
-		<section class="one-third" >
-			<td><img src="images/shirt.png" class="circleicon"></td>
-			<h1> Graphic Design</h1>
-			<p> An aesthetic complete with logos and icons is everything. Let&#8217s create a look and feel that represents your vision. </br></br></p>
-		</section>
-	
-	</div>
-	</div>
-
-
-	<div id="assignments">
-
-	<div id="about"><br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<h1>assignments</h1>
-
-
-	<ul>
-	<li> <a href="pages/paintings/painting1.html">Painting1</a>
-	</li>
-	<li>
-		<a href="pages/paintings/painting2.html">Painting 2</a>
-	</li>
-	<li>
-		<a href="pages/interview/interview.html">Interview</a>
-
-	</li>
-	<li>
-		<a href="https://lysandravuong.wordpress.com/">Wordpress blog </a>
-
-
-	
-	</li>
-	<li>
-	<a href="index2.html">Photo essay </a>
-	</li>
-
-	</ul>
-</div>
-</div>
-
-
 
 	<footer>
-	&copy; lysandra vuong 2017
 	</footer>
-	
-	</body>
 
-</html>
+	</body>
+	</html>
